--- a/src/components/Atoms/BarGraph/BarGraph.scss
+++ b/src/components/Atoms/BarGraph/BarGraph.scss
@@ -1,5 +1,5 @@
 .bar-graph {
-  background: var(--input-background);
+  background: var(--grey6);
   height: 2.25rem;
   border-radius: 0.25rem;
   overflow: hidden;
